--- a/src/main/webapp/css/_custom.scss
+++ b/src/main/webapp/css/_custom.scss
@@ -1,3 +1,10 @@
+/** 
+    _custom.scss: main config of the flussbad-theme
+
+    Created:    2017-03-05 23:20 by Christian Berndt
+    Modified:   2017-09-01 17:32 by Christian Berndt
+    Version:    0.4.7
+*/
 /* These inject tags are used for dynamically creating imports for themelet styles, you can place them where ever you like in this file. */
 
 /* inject:imports */
@@ -5,6 +12,4 @@
 
 /* This file allows you to override default styles in one central location for easier upgrade and maintenance. */
 
-body {
-    background-color: red;
-}
+/* @import "variables"; */
