Basic css setup.

--- a/src/main/webapp/css/_custom.scss
+++ b/src/main/webapp/css/_custom.scss
@@ -1,9 +1,9 @@
 /** 
     _custom.scss: main config of the flussbad-theme
 
-    Created:    2017-03-05 23:20 by Christian Berndt
-    Modified:   2017-09-01 17:32 by Christian Berndt
-    Version:    0.4.7
+    Created:    2017-09-07 16:32 by Christian Berndt
+    Modified:   2017-09-07 16:32 by Christian Berndt
+    Version:    1.0.0
 */
 /* These inject tags are used for dynamically creating imports for themelet styles, you can place them where ever you like in this file. */
 
@@ -12,4 +12,11 @@
 
 /* This file allows you to override default styles in one central location for easier upgrade and maintenance. */
 
-/* @import "variables"; */
+@import "navigation";
+@import "variables";
+
+.portlet {
+    h2.portlet-title-text {
+        display: none;
+    }
+}
