Update intro template configuration.

--- a/src/main/webapp/css/_custom.scss
+++ b/src/main/webapp/css/_custom.scss
@@ -13,10 +13,21 @@
 /* This file allows you to override default styles in one central location for easier upgrade and maintenance. */
 
 @import "navigation";
+@import "templates";
 @import "variables";
+
+.modal {
+    &.slideshow {
+        display: none;
+    }
+}
 
 .portlet {
     h2.portlet-title-text {
         display: none;
     }
+}
+
+#wrapper {
+    padding-top: 0; 
 }
