--- a/src/main/webapp/css/_navigation.scss
+++ b/src/main/webapp/css/_navigation.scss
@@ -15,5 +15,10 @@
     
     .navbar-brand {
         font-size: 16px;
+        letter-spacing: .1em;       
+    }
+    
+    &.navbar {
+        margin-bottom: 0;
     }
 }
