--- a/src/main/webapp/css/_custom.scss
+++ b/src/main/webapp/css/_custom.scss
@@ -2,7 +2,7 @@
     _custom.scss: main config of the flussbad-theme
 
     Created:    2017-09-07 16:32 by Christian Berndt
-    Modified:   2017-09-07 16:32 by Christian Berndt
+    Modified:   2017-09-11 23:24 by Christian Berndt
     Version:    1.0.0
 */
 /* These inject tags are used for dynamically creating imports for themelet styles, you can place them where ever you like in this file. */
@@ -12,9 +12,19 @@
 
 /* This file allows you to override default styles in one central location for easier upgrade and maintenance. */
 
+@import "core_portlets";
 @import "navigation";
 @import "templates";
 @import "variables";
+
+.control-menu {
+    .toggle-controls {
+        &.visible-xs {
+            display: inline-block ! important;
+        }
+    }
+}
+
 
 .modal {
     &.slideshow {
