--- a/src/main/webapp/css/_core_portlets.scss
+++ b/src/main/webapp/css/_core_portlets.scss
@@ -2,8 +2,8 @@
     _core_portlets.scss: adjust Liferay's core portlets for the flussbad-theme
 
     Created:    2017-09-11 23:23 by Christian Berndt
-    Modified:   2017-09-11 23:23 by Christian Berndt
-    Version:    0.1.0
+    Modified:   2017-09-12 15:47 by Christian Berndt
+    Version:    0.1.1
 */
 
 .controls-hidden {
@@ -35,6 +35,13 @@
     &:hover > .portlet-content-editable, 
     &.focus > .portlet-content-editable {
         border-color: transparent;
+    }
+}
+
+
+.portlet-decorate {
+    .portlet-content {
+        border-width: 0; 
     }
 }
 
