--- a/src/main/webapp/css/_templates.scss
+++ b/src/main/webapp/css/_templates.scss
@@ -3,11 +3,24 @@
     of the flussbad-theme.
 
     Created:    2017-09-07 17:21 by Christian Berndt
-    Modified:   2017-09-07 17:21 by Christian Berndt
-    Version:    1.0.0
+    Modified:   2017-09-12 21:49 by Christian Berndt
+    Version:    1.0.1
 */
 
 @import "variables";
+
+@mixin background-cover() {
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='.myBackground.jpg', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='myBackground.jpg', sizingMethod='scale')";
+}
 
 h3 {
     font-size: 14px;
@@ -21,6 +34,34 @@ h3 {
     margin-right: -15px;
     text-align: center;
     
+    .abstract {
+    
+        margin-left: -15px;
+        margin-right: -15px;
+        margin-bottom: 1em;
+        padding: 0 15px 30px 15px;
+      
+    }
+    
+    .btn-default {
+        border: 2px solid $navigation-font-color; 
+        border-radius: 2px;
+        
+        color: $navigation-font-color;
+        font-size: 22px;
+        font-family: "Amatic SC",cursive;
+        font-weight: 600;
+        letter-spacing: 2.6px;
+        text-transform: uppercase;
+        margin-top: 1em;
+        padding: 10px 30px 8px;
+        width: 100%;
+        
+        &:focus,
+        &:hover {
+            color: $hover-font-color;
+        }
+    } 
     
     h1 {
         font-weight: 600;
@@ -28,6 +69,19 @@ h3 {
     
     h2, h3 {
         font-weight: 600; 
+    }
+    
+    .keyvisual {
+    
+        display: table;
+        height: 80vh;
+        
+        @include background-cover(); 
+        
+        .claim {
+            display: table-cell;
+            vertical-align: middle;
+        }
     }
     
     &.sand {
@@ -47,7 +101,26 @@ h3 {
     &.turquois {
         
         color: $default-font-color;
-        background-color: $color-turquois;   
+        
+        .abstract {
+            background-clip: padding-box;
+            background-color: $color-turquois;  
+            -webkit-background-clip: padding;
+            -moz-background-clip: padding;
+            border-bottom: 13px solid transparent;
+            border-image: url(../images/border-wave.png) 15 0 15 0 round;
+            -webkit-border-image: url(../images/border-wave.png) 15 0 15 0 round;
+            -o-border-image: url(../images/border-wave.png) 15 0 15 0 round;
+            border-top: 13px solid transparent; 
+            
+            .btn-default {
+                border-color: transparent;
+            }
+        }
+        
+        .abstracts {
+            margin-top: -30px;
+        }
         
         h1 {
             color: white;
