--- a/src/main/webapp/css/_navigation.scss
+++ b/src/main/webapp/css/_navigation.scss
@@ -2,8 +2,8 @@
     _navigation.scss: main-navigation of the flussbad-theme.
 
     Created:    2017-03-05 23:08 by Christian Berndt
-    Modified:   2017-09-12 16:11 by Christian Berndt
-    Version:    1.0.3
+    Modified:   2017-09-12 21:47 by Christian Berndt
+    Version:    1.0.4
 */
 
 @import "variables";
@@ -17,10 +17,6 @@
     text-transform: uppercase;
     width: 100%;
     z-index: 11;
-    
-    .navbar {
-        border: none;
-    }
     
     .navbar-brand {
     
@@ -152,6 +148,32 @@
                 &.open {
                     background-color: #eeeeee;
                 }
+            }
+        }
+    }
+    
+    &.navbar {
+        border: none;
+        margin-bottom: 0;
+    }   
+        
+    &.navbar-default {
+     
+        .navbar-collapse {
+        
+            border: none;
+            margin-left: -15px;
+            margin-right: -15px;
+            
+            li > a {
+                padding: 10px 0;
+            }
+        }
+        
+        .navbar-toggle {
+            &:focus,
+            &:hover {
+                background-color: transparent;
             }
         }
     }
