Simplify vertical centering.

--- a/src/main/webapp/css/_templates.scss
+++ b/src/main/webapp/css/_templates.scss
@@ -3,8 +3,8 @@
     of the flussbad-theme.
 
     Created:    2017-09-07 17:21 by Christian Berndt
-    Modified:   2017-09-12 21:49 by Christian Berndt
-    Version:    1.0.1
+    Modified:   2017-09-13 14:34 by Christian Berndt
+    Version:    1.0.2
 */
 
 @import "variables";
@@ -20,6 +20,14 @@
     
     filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='.myBackground.jpg', sizingMethod='scale');
     -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='myBackground.jpg', sizingMethod='scale')";
+}
+
+@mixin vertical-align($position: relative) {
+  position: $position;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 h3 {
@@ -73,14 +81,14 @@ h3 {
     
     .keyvisual {
     
-        display: table;
         height: 80vh;
         
         @include background-cover(); 
         
         .claim {
-            display: table-cell;
-            vertical-align: middle;
+        
+            @include vertical-align();
+
         }
     }
     
