--- a/src/main/webapp/css/_custom.scss
+++ b/src/main/webapp/css/_custom.scss
@@ -2,8 +2,8 @@
     _custom.scss: main config of the flussbad-theme
 
     Created:    2017-09-07 16:32 by Christian Berndt
-    Modified:   2017-09-12 21:47 by Christian Berndt
-    Version:    1.0.3
+    Modified:   2017-09-13 19:03 by Christian Berndt
+    Version:    1.0.4
 */
 /* These inject tags are used for dynamically creating imports for themelet styles, you can place them where ever you like in this file. */
 
@@ -12,6 +12,7 @@
 
 /* This file allows you to override default styles in one central location for easier upgrade and maintenance. */
 
+@import "adt";
 @import "core_portlets";
 @import "fonts";
 @import "navigation";
