--- a/src/main/webapp/css/_responsive.scss
+++ b/src/main/webapp/css/_responsive.scss
@@ -2,8 +2,8 @@
     _responsive.scss: responsive configuration of the flussbad-theme
 
     Created:    2017-09-12 19:34 by Christian Berndt
-    Modified:   2017-09-13 16:15 by Christian Berndt
-    Version:    0.1.2
+    Modified:   2017-09-13 21:47 by Christian Berndt
+    Version:    0.1.3
 */
 
 
@@ -16,6 +16,7 @@
         .keyvisual {
         
             display: block;
+            height: 90vh;
             
             .claim {
             
