--- a/src/main/webapp/css/_adt.scss
+++ b/src/main/webapp/css/_adt.scss
@@ -2,11 +2,11 @@
     _adt.scss: Configuration of application display templates of the flussbad-theme
 
     Created:    2017-09-13 19:02 by Christian Berndt
-    Modified:   2017-09-13 19:02 by Christian Berndt
-    Version:    0.1.0
+    Modified:   2017-09-14 12:19 by Christian Berndt
+    Version:    0.1.1
 */
 
-@import "mixins";
+@import "custom_mixins";
 @import "variables";
 
 .portlet-asset-publisher {
