--- a/src/main/webapp/css/_templates.scss
+++ b/src/main/webapp/css/_templates.scss
@@ -3,11 +3,11 @@
     of the flussbad-theme.
 
     Created:    2017-09-07 17:21 by Christian Berndt
-    Modified:   2017-09-13 22:17 by Christian Berndt
-    Version:    1.0.2
+    Modified:   2017-09-14 12:18 by Christian Berndt
+    Version:    1.0.3
 */
 
-@import "mixins";
+@import "custom_mixins";
 @import "variables";
 
 h3 {
