2nd level main navigation.

--- a/src/main/webapp/css/_custom.scss
+++ b/src/main/webapp/css/_custom.scss
@@ -2,8 +2,8 @@
     _custom.scss: main config of the flussbad-theme
 
     Created:    2017-09-07 16:32 by Christian Berndt
-    Modified:   2017-09-13 19:03 by Christian Berndt
-    Version:    1.0.4
+    Modified:   2017-09-14 16:16 by Christian Berndt
+    Version:    1.0.5
 */
 /* These inject tags are used for dynamically creating imports for themelet styles, you can place them where ever you like in this file. */
 
@@ -22,13 +22,14 @@
 a {
     &:active,
     &:focus {
-        outline-color: transparent;
+        outline-color: transparent ! important;
     }
 }
 
 body {
     font-size: $default-font-size;
 }
+
 .control-menu {
     .toggle-controls {
         &.visible-xs {
