--- a/src/main/webapp/css/_responsive.scss
+++ b/src/main/webapp/css/_responsive.scss
@@ -2,8 +2,8 @@
     _responsive.scss: responsive configuration of the flussbad-theme
 
     Created:    2017-09-12 19:34 by Christian Berndt
-    Modified:   2017-09-13 21:47 by Christian Berndt
-    Version:    0.1.3
+    Modified:   2017-09-14 16:17 by Christian Berndt
+    Version:    0.1.4
 */
 
 
@@ -76,10 +76,18 @@
         .navbar-header {
             float: left;
         }
-        
+         
         .navbar-nav {
+        
             > li {
+            
                 float: left;
+                
+                > a {
+                    &.dropdown-toggle {
+                        margin-left: -20px;
+                    }
+                }
             }
             
             &.navbar-right {
