Configured event list adt and sample content.

--- a/src/main/webapp/css/_adt.scss
+++ b/src/main/webapp/css/_adt.scss
@@ -10,6 +10,10 @@
 @import "variables";
 
 .portlet-asset-publisher {
+    
+    .events {
+        text-align: center;
+    }
         
     .statements {
 
