--- a/src/main/webapp/css/_responsive.scss
+++ b/src/main/webapp/css/_responsive.scss
@@ -2,8 +2,8 @@
     _responsive.scss: responsive configuration of the flussbad-theme
 
     Created:    2017-09-12 19:34 by Christian Berndt
-    Modified:   2017-09-14 16:17 by Christian Berndt
-    Version:    0.1.4
+    Modified:   2017-09-16 13:50 by Christian Berndt
+    Version:    0.1.5
 */
 
 
@@ -66,6 +66,19 @@
 @media (min-width: 992px) {
     
     #navigation {
+    
+        .nav {
+    
+            &.language {
+            
+                display: inline-block;
+                float: right;
+                position: relative;
+                right: auto;
+                top: auto; 
+                
+            }
+        }
     
         .navbar-collapse {
             &.collapse {
