--- a/src/main/webapp/css/_custom_mixins.scss
+++ b/src/main/webapp/css/_custom_mixins.scss
@@ -2,8 +2,8 @@
     _mixins.scss: mixins used by the flussbad-theme
 
     Created:    2017-09-13 22:16 by Christian Berndt
-    Modified:   2017-09-13 22:16 by Christian Berndt
-    Version:    1.0.0
+    Modified:   2017-09-16 14:43 by Christian Berndt
+    Version:    1.0.1
 */
 
 @mixin background-cover() {
@@ -17,6 +17,15 @@
     
     filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='.myBackground.jpg', sizingMethod='scale');
     -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='myBackground.jpg', sizingMethod='scale')";
+}
+
+@mixin rotate($degree) {
+    
+    transform: rotate($degree);
+    -webkit-transform: rotate($degree);
+    -moz-transform: rotate($degree);
+    -o-transform: rotate($degree);
+    
 }
 
 @mixin vertical-align($position: relative) {
