--- a/src/main/webapp/css/_templates.scss
+++ b/src/main/webapp/css/_templates.scss
@@ -3,8 +3,8 @@
     of the flussbad-theme.
 
     Created:    2017-09-07 17:21 by Christian Berndt
-    Modified:   2017-09-14 15:44 by Christian Berndt
-    Version:    1.0.4
+    Modified:   2017-09-16 15:29 by Christian Berndt
+    Version:    1.0.5
 */
 
 @import "custom_mixins";
@@ -47,14 +47,6 @@ h3 {
         &:hover {
             color: $hover-font-color;
         }
-    } 
-    
-    h1 {
-        font-weight: 600;
-    }
-    
-    h2, h3 {
-        font-weight: 600; 
     }
     
     .keyvisual {
@@ -104,10 +96,6 @@ h3 {
             }
         }
         
-        .abstracts {
-            margin-top: -30px;
-        }
-        
         h1 {
             color: white;
         } 
@@ -119,6 +107,49 @@ h3 {
         h3 {
             color: white;
         } 
+    }
+    
+    &.with-image { 
+         
+        .abstracts {
+            margin-top: -165px;
+        }  
+        
+        a.club-link {
+        
+            position: relative;
+            z-index: 9999;
+            margin-bottom: -120px;
+            margin-right: 15px;
+            
+            background: $color-orange;
+            border-radius: 100%;
+            text-align: center;
+            width: 120px;
+            height: 120px;
+            display: inline-block;
+            padding-top: 3px;
+            line-height: 150%;
+            
+            span {
+            
+                font-family: $button-font-family;
+                font-size: 48px;
+                font-weight: 600; 
+                line-height: 40px !important;
+                text-transform: uppercase;
+                color: #fff;
+                padding-top: 20px;
+                padding-left: -5px;
+                display: block;
+                
+                @include rotate(-15deg);                    
+            }
+            
+            &:hover {
+               background: darken($color-orange, 5%);
+            }
+        }
     }
 }
 
