--- a/src/main/webapp/css/_adt.scss
+++ b/src/main/webapp/css/_adt.scss
@@ -2,8 +2,8 @@
     _adt.scss: Configuration of application display templates of the flussbad-theme
 
     Created:    2017-09-13 19:02 by Christian Berndt
-    Modified:   2017-09-14 12:19 by Christian Berndt
-    Version:    0.1.1
+    Modified:   2017-09-18 13:22 by Christian Berndt
+    Version:    0.1.2
 */
 
 @import "custom_mixins";
@@ -14,6 +14,28 @@
     .events {
         text-align: center;
     }
+    
+            
+        .statements.sand {
+            background-color: $color-sand;
+        }
+        
+        .statements.turquois {
+            background-color: $color-turquois;
+            color: white;
+        } 
+        
+    .statements {
+    
+        .statement {
+                                      
+            blockquote {
+            }
+          
+            .author {
+            }
+        }
+    }
         
     .statements {
 
@@ -21,6 +43,30 @@
         margin-right: -15px;
         padding-left: 15px;
         padding-right: 15px;
+            
+        .author {
+            padding: 0 0 1em 0;
+        }
+                
+        blockquote {
+        
+            text-align: center;
+            border: none;
+            padding: 2em 0 0 0;
+            margin: 0;
+            font-family: $medium-font-family;
+            font-size: $lead-font-size;
+            line-height: 125%;
+            white-space: normal; /* Restore normal white-space behaviour */
+                     
+            &::before {
+                content: "\201E";
+            }
+            
+            &::after {
+                content: "\201C";
+            }         
+        }
             
         .carousel-inner {
         
@@ -31,17 +77,27 @@
                 @include vertical-align(absolute);
             
             }
-        }  
+        } 
           
         &.gray-green {
         
-            background: $color-gray-green;
-            
+            background-color: $color-gray-green;
+            color: white;
+                        
             .item {
             
                 background-color: $color-gray-green;
                             
             }
+        } 
+           
+        &.sand {
+            background-color: $color-sand;
+        }
+        
+        &.turquois {
+            background-color: $color-turquois;
+            color: white;
         }   
     } 
 }
